@@ -1,15 +1,12 @@
 package org.batfish.main;
 
-import com.google.common.io.Closer;
 import com.ibm.icu.text.CharsetDetector;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.SequenceInputStream;
 import java.nio.charset.Charset;
 import javax.annotation.Nonnull;
 import org.apache.commons.io.ByteOrderMark;
-import org.apache.commons.io.IOUtils;
 import org.apache.commons.io.input.BOMInputStream;
 
 /** Utility class for decoding streams of unknown charset to strings. */
@@ -22,22 +19,15 @@ final class StreamDecoder {
    *
    * @throws IOException if there is an error
    */
-  @SuppressWarnings("PMD.CloseResource") // PMD does not understand Closer.
   static @Nonnull String decodeStreamAndAppendNewline(@Nonnull InputStream inputStream)
       throws IOException {
-    byte[] rawBytes = IOUtils.toByteArray(inputStream);
+    byte[] rawBytes = inputStream.readAllBytes();
+    if (rawBytes.length == 0) {
+      return "";
+    }
     Charset cs = Charset.forName(new CharsetDetector().setText(rawBytes).detect().getName());
-    try (Closer closer = Closer.create()) {
-      InputStream inputByteStream =
-          closer.register(bomInputStream(new ByteArrayInputStream(rawBytes)));
-      InputStream finalInputStream =
-          closer.register(
-              rawBytes.length > 0
-                  ? new SequenceInputStream(
-                      inputByteStream,
-                      closer.register(bomInputStream(new ByteArrayInputStream("\n".getBytes(cs)))))
-                  : inputByteStream);
-      return new String(IOUtils.toByteArray(finalInputStream), cs);
+    try (BOMInputStream bomStream = bomInputStream(new ByteArrayInputStream(rawBytes))) {
+      return new String(bomStream.readAllBytes(), cs) + "\n";
     }
   }
 
